Remove mirrors and use header for hmac verification