@@ -15,6 +15,8 @@ import org.apache.maven.artifact.versioning.ComparableVersion;
 import org.springframework.beans.factory.config.ConfigurableBeanFactory;
 import org.springframework.context.annotation.Scope;
 import org.springframework.stereotype.Component;
+import org.springframework.util.MultiValueMap;
+import org.springframework.web.util.UriComponentsBuilder;
 
 import java.io.IOException;
 import java.net.URL;
@@ -22,7 +24,9 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
 import java.security.NoSuchAlgorithmException;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 
 @Component
@@ -141,9 +145,25 @@ public class SimpleHttpFeaturedModUpdaterTask extends CompletableTask<PatchResul
     Files.createDirectories(targetPath.getParent());
     updateMessage(i18n.get("updater.downloadingFile", featuredModFile.getName()));
 
-    String url = featuredModFile.getUrl();
+    String urlString = featuredModFile.getUrl();
     String md5sum = featuredModFile.getMd5();
-    downloadService.downloadFileWithMirrors(new URL(url), targetPath, this::updateProgress, md5sum);
+
+    // We perform cloudflare hmac verification either with a query parameter or by sending a request header hmac with the value
+    // Using a request header is preferred as this allows us to cache the url on cloudflare without the query string as the
+    // query string effectively renders the cache ineffective.
+    MultiValueMap<String, String> queryParameters = UriComponentsBuilder.fromHttpUrl(urlString).build().getQueryParams();
+    Map<String, String> requestParameters = new HashMap<>();
+
+    URL url;
+
+    if (queryParameters.containsKey("verify")) {
+      url = UriComponentsBuilder.fromHttpUrl(urlString).replaceQueryParam("verify").build().toUri().toURL();
+      requestParameters.put("hmac", queryParameters.getFirst("verify"));
+    } else {
+      url = new URL(urlString);
+    }
+
+    downloadService.downloadFile(url, requestParameters, targetPath, this::updateProgress, md5sum);
   }
 
   public void setFeaturedMod(FeaturedModBean featuredMod) {
